--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 
 <a href="https://Facebook.com/F.Glitch.EG"  class="FB" target="_blank">Facebook</a> <br>   
 
-<a href="https://Twitter.com/glitch_eg_404" class="TW" target="_blank">Twitter</a> <br>   
-
 <center>
 <div class="Error"  >
 
@@ -37,7 +35,7 @@
 
 <h4>جرب هاتفك او ايبادك</h4>
 
-<a href="http://t.me/glitch_404_eg" target="_blank" rel="noopener noreferrer">تواصل معي</a>
+<a href="http://t.me/glitch_404_eg" target="_blank" rel="noopener noreferrer">للتواصل معي</a>
 
 </div>
 </center>
