--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <h4>جرب هاتفك او ايبادك</h4>
 
-<a href="http://t.me/glitch_404_eg" target="_blank" rel="noopener noreferrer">للتواصل معي</a>
+<a href="https://t.me/fares_hamed" target="_blank" rel="noopener noreferrer">للتواصل معي</a>
 
 </div>
 </center>
